--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,13 +49,6 @@ find_package(ZLIB REQUIRED)
 # Clang
 message("Downloading Clang/LLVM 3.6.0 ...")
 
-# Check if platform is 64 bit
-if(CMAKE_SIZEOF_VOID_P EQUAL 4)
-  set(64_BIT_PLATFORM 0)
-else()
-  set(64_BIT_PLATFORM 1)
-endif()
-
 set(CLANG_URL "http://llvm.org/releases/3.6.0" )
 if(APPLE)
   set(CLANG_DIRNAME "clang+llvm-3.6.0-x86_64-apple-darwin")
@@ -134,6 +127,16 @@ add_library(color_coded SHARED src/main.cpp)
 set_property(TARGET color_coded PROPERTY PREFIX "")
 set_property(TARGET color_coded PROPERTY OUTPUT_NAME "color_coded.so")
 set_property(TARGET color_coded PROPERTY SUFFIX "")
+
+# Fix compilation problem: relocation R_X86_64_32 against `a local symbol' can not be
+# used when making a shared object; recompile with -fPIC.
+# See http://www.cmake.org/pipermail/cmake/2007-May/014350.html
+if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+  set_property(TARGET color_coded PROPERTY COMPILE_FLAGS "-fPIC")
+  set(64_BIT_PLATFORM 0)
+else()
+  set(64_BIT_PLATFORM 1)
+endif()
 
 # Clang
 set(LLVM_LIB_PATH ${LLVM_ROOT_PATH}/lib)
