Change the x64 check #25

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ set_property(TARGET color_coded PROPERTY SUFFIX "")
 # Fix compilation problem: relocation R_X86_64_32 against `a local symbol' can not be
 # used when making a shared object; recompile with -fPIC.
 # See http://www.cmake.org/pipermail/cmake/2007-May/014350.html
-if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
   set_property(TARGET color_coded PROPERTY COMPILE_FLAGS "-fPIC")
   set(64_BIT_PLATFORM 1)
 else()
