--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
 install:
   - sudo apt-get install liblua5.1-dev libncurses-dev libboost-dev libz-dev g++-4.9
   - export CXX="g++-4.9"
-script: cmake . && make
+script: cmake . && make && make install
