ignore CMake output incase built in main directory. Required for NeoBundle build #35

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ bin
 # Clang
 /clang*
 /lib/clang*
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+color_coded.so
+install_manifest.txt
 
 # Personal notes
 NOTES
