--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,14 @@ bin
 # Clang
 /clang*
 /lib/clang*
-CMakeCache.txt
-CMakeFiles/
-cmake_install.cmake
-color_coded.so
-install_manifest.txt
+
+# CMake
+/build
+/CMakeCache.txt
+/CMakeFiles/
+/cmake_install.cmake
+/color_coded.so
+/install_manifest.txt
 
 # Personal notes
 NOTES
