--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ before_install:
   - if [ "$CXX" == "clang++"  ]; then sudo add-apt-repository -y 'deb http://llvm.org/apt/precise/ llvm-toolchain-precise-3.5 main'; fi
   - sudo apt-get update -qq
 install:
-  - sudo apt-get install liblua5.1-dev libncurses-dev libboost-dev libz-dev
+  - sudo apt-get install liblua5.1-dev lua5.1 libncurses-dev libboost-dev libz-dev
   - if [ "$CXX" == "g++"  ]; then sudo apt-get install g++-4.9; fi
   - if [ "$CXX" == "g++"  ]; then export CXX="g++-4.9"; fi
   - if [ "$CXX" == "clang++"  ]; then sudo apt-get install --allow-unauthenticated libstdc++-4.9-dev clang-3.5; fi
   - if [ "$CXX" == "clang++"  ]; then export CXX="clang++-3.5"; fi
-script: cmake . && make && make install
+script:
+  - cmake . && make && make install
+  - echo "os.exit()" | lua -l color_coded
