Simplify finding lua
There are cmake find modules for lua 5.0 and 5.1. The current cmake
master however does not contain a FindLua52. Unless a distribution adds
this script in their repos, searching for lua 5.2 will always fail and
we will fall back to lua 5.1 if it is available. If it is not, the
generic FindLua.cmake will find lua 5.2. This is a problem on systems
where both 5.1 and 5.2 are installed, as 5.2 will never be selected. As
the FindLua.cmake searches for versions >= 5.0 and returns the highest
version it finds we can just use that.

The FindLua package only got added with CMake 3.0.0 so we have to add
our own.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ else()
   set(64_BIT_PLATFORM 1)
 endif()
 
+# Add custom find modules
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
 # C++14
 include(cmake/cxx14.cmake)
 
