--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,13 @@ endif()
 # Add custom find modules
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
+# Submodules
+message(STATUS "Updating submodules")
+execute_process(
+  COMMAND git submodule update --recursive --init
+  WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
+)
+
 # C++14
 include(cmake/cxx14.cmake)
 
