generate_sources can now be run out-of-source.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,10 @@ include_directories(
   include
 
   ${LLVM_INCLUDE_PATH}
-
   ${CURSES_INCLUDE_PATH}
   ${ZLIB_INCLUDE_PATH}
+
+  $ENV{PWD}/include/
 )
 
 include(cmake/generate_sources.cmake)
